--- a/app/assets/stylesheets/main/responsive.css
+++ b/app/assets/stylesheets/main/responsive.css
@@ -84,6 +84,10 @@
   .innerpage3-rightsidetabs .nav-link {
     display: block;
   }
+
+}
+
+@media (min-width: 768px) {
   .servicoteam-wrap {
     display: block !important;
   }
@@ -371,9 +375,6 @@
 
   .varificado-btn3 {
     right: 10px;
-  }
-  .servicoteam-wrap {
-    display: none;
   }
   .catagorisingle-slide i {
     width: 90px;
@@ -837,11 +838,6 @@
     padding-bottom: 138px;
   }
 
-  p.gig-title {
-    font-size: 12px;
-    line-height: 16px;
-  }
-
   p.loyed2 {
     font-size: 12px;
   }
@@ -901,7 +897,7 @@
     display: none;
   }
 
-  .page3slides-contentrd p {
+  .page3slides-contentrd p.gig-price {
     font-size: 12px;
   }
 
@@ -1222,6 +1218,10 @@
   .todoo1 img {
     display: none;
   }
+
+  .servicoteam-wrap {
+    display: none;
+  }
   #profile_tabs a {
     font-size: 14px;
   }
@@ -1344,11 +1344,7 @@
     padding-left: 7px;
   }
 
-  p.gig-title {
-    font-size: 11px;
-  }
-
-  .page3slides-contentrd p {
+  .page3slides-contentrd p.gig-price {
     font-size: 11px;
   }
 
@@ -1569,7 +1565,6 @@
   p.req_title {
     color: #000;
     font-size: 15px;
-    margin-bottom: 6px !important;
   }
 
   .single-request {
@@ -1830,10 +1825,6 @@
 
   .arroweee {
     display: block;
-  }
-
-  .servicoteam-wrap {
-    display: none;
   }
 
   .perfil-area {
@@ -2179,9 +2170,6 @@
     box-shadow: 0 -5px 20px 0 rgba(0, 0, 0, 0.1);
   }
 
-  .servicoteam-wrap {
-    display: none;
-  }
   .plusred i {
     background: #39C27B;
     color: #fff;
